[gd_scene load_steps=20 format=3 uid="uid://ciqwvja88mqu4"]

[ext_resource type="Script" path="res://Main.gd" id="1_ae0gb"]
[ext_resource type="PackedScene" uid="uid://qd0xr7e5jixt" path="res://player.tscn" id="2_hiod6"]
[ext_resource type="AudioStream" uid="uid://ba1tw3vtdosls" path="res://onlu text/music/music.mp3" id="3_dk12t"]
[ext_resource type="AudioStream" uid="uid://c8qauo0hitcwd" path="res://onlu text/music/sound.mp3" id="4_trtag"]
[ext_resource type="Texture2D" uid="uid://djf0v3sdst3gg" path="res://onlu text/plus.png" id="5_jxej6"]
[ext_resource type="Texture2D" uid="uid://uvmnqavqsxga" path="res://onlu text/plus hover.png" id="6_5ev8n"]
[ext_resource type="Texture2D" uid="uid://bnaswv578dvm1" path="res://onlu text/remove.png" id="7_n0cri"]
[ext_resource type="Texture2D" uid="uid://ceui3ur7b3qqe" path="res://onlu text/remove hover.png" id="8_rv5kj"]
[ext_resource type="FontFile" uid="uid://d2jwjs24yenri" path="res://onlu text/font/m5x7.ttf" id="9_qikim"]
[ext_resource type="Script" path="res://Count.gd" id="10_0f8t4"]
[ext_resource type="PackedScene" uid="uid://prlnsutlnau7" path="res://fake.tscn" id="11_a5xch"]
[ext_resource type="PackedScene" uid="uid://oecb8ju5dopi" path="res://platform2.tscn" id="12_r2iuw"]
[ext_resource type="PackedScene" uid="uid://dkn0chrqkt5kq" path="res://dont.tscn" id="13_dvcc5"]
[ext_resource type="PackedScene" uid="uid://fla7i05avcvb" path="res://dont2.tscn" id="14_175aj"]
[ext_resource type="PackedScene" uid="uid://bpi0xfwg4at7h" path="res://platform.tscn" id="15_lphqu"]
[ext_resource type="PackedScene" uid="uid://38uorx8dco5" path="res://win.tscn" id="16_pxhnm"]

[sub_resource type="LabelSettings" id="LabelSettings_im456"]
font = ExtResource("9_qikim")
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_676r4"]
size = Vector2(20, 37.5)

[sub_resource type="LabelSettings" id="LabelSettings_4arfh"]
font = ExtResource("9_qikim")
font_color = Color(0, 0, 0, 1)

[node name="Level1" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ae0gb")

[node name="Bg" type="ColorRect" parent="."]
z_index = -2
offset_left = -132.0
offset_top = -79.0
offset_right = 64.0
offset_bottom = 50.0

[node name="player" parent="." instance=ExtResource("2_hiod6")]
position = Vector2(-112, -75)

[node name="music" type="AudioStreamPlayer2D" parent="player"]
position = Vector2(-2, -1)
stream = ExtResource("3_dk12t")
volume_db = -10.0
autoplay = true

[node name="sound" type="AudioStreamPlayer2D" parent="player"]
position = Vector2(-2, -1)
stream = ExtResource("4_trtag")
volume_db = -5.0

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-34, -15)
zoom = Vector2(6, 6)
limit_smoothed = true
position_smoothing_speed = 20.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]
layer = 5
follow_viewport_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera"]
layer = 5
scroll_base_scale = Vector2(0, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera/ParallaxBackground"]

[node name="Plus" type="TextureButton" parent="Camera/ParallaxBackground/ParallaxLayer"]
z_index = 5
offset_left = 179.0
offset_top = 39.0
offset_right = 189.0
offset_bottom = 49.0
texture_normal = ExtResource("5_jxej6")
texture_hover = ExtResource("6_5ev8n")

[node name="Remove" type="TextureButton" parent="Camera/ParallaxBackground/ParallaxLayer"]
z_index = 5
offset_left = 179.0
offset_top = 51.0
offset_right = 189.0
offset_bottom = 61.0
texture_normal = ExtResource("7_n0cri")
texture_hover = ExtResource("8_rv5kj")

[node name="Count" type="Label" parent="Camera/ParallaxBackground/ParallaxLayer"]
offset_left = 166.0
offset_top = 36.0
offset_right = 181.0
offset_bottom = 52.0
text = "0"
label_settings = SubResource("LabelSettings_im456")
script = ExtResource("10_0f8t4")

[node name="Fake" parent="." instance=ExtResource("11_a5xch")]
position = Vector2(-112, 65)

[node name="Fake2" parent="." instance=ExtResource("11_a5xch")]
position = Vector2(47, 12)

[node name="Fakedd" parent="." instance=ExtResource("12_r2iuw")]
visible = false
position = Vector2(2, -49)

[node name="Walls" type="Node2D" parent="."]

[node name="Area2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/Area2D"]
position = Vector2(72, -18)
shape = SubResource("RectangleShape2D_676r4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D"]
position = Vector2(-140, -16.75)
shape = SubResource("RectangleShape2D_676r4")

[node name="Dont" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Dont2" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(-118, 9)

[node name="Dont3" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(-100, 9)

[node name="Dont6" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(-82, 9)

[node name="Dont7" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(-64, 9)

[node name="Dont4" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(-46, 9)

[node name="Dont5" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(-28, 9)

[node name="Dont11" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(-10, 9)

[node name="Dont13" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(8, 9)

[node name="Dont8" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(29, 45)

[node name="Dont9" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(11, 45)

[node name="Dont18" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(-33, 65)

[node name="Dont10" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(-7, 45)

[node name="Dont12" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(47, 45)

[node name="Dont14" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(-87, 65)

[node name="Dont15" parent="Dont" instance=ExtResource("13_dvcc5")]
position = Vector2(-69, 65)

[node name="Dont16" parent="Dont" instance=ExtResource("14_175aj")]
position = Vector2(-51, 65)

[node name="Platforms" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Platform" parent="Platforms" instance=ExtResource("15_lphqu")]
position = Vector2(-100, -9)

[node name="Platform3" parent="Platforms" instance=ExtResource("15_lphqu")]
position = Vector2(22, -8)

[node name="Win" parent="." instance=ExtResource("16_pxhnm")]
position = Vector2(-24, 89)

[node name="Label" type="Label" parent="."]
z_index = -1
offset_left = -126.0
offset_top = -62.0
offset_right = -84.0
offset_bottom = -39.0
text = "Level 2"
label_settings = SubResource("LabelSettings_4arfh")

[connection signal="pressed" from="Camera/ParallaxBackground/ParallaxLayer/Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Camera/ParallaxBackground/ParallaxLayer/Remove" to="." method="_on_remove_pressed"]
[connection signal="body_entered" from="Win" to="." method="_on_win_body_entered"]
